Add loading icons to profile page

--- a/www-src/app/views/user/profile.html
+++ b/www-src/app/views/user/profile.html
@@ -63,7 +63,8 @@
 							<a href="/#!/{{disc.apistring}}">{{disc.title}}</a>
 						</p>
 					</div>
-					<div ng-show="creditDiscoveries.length < 1">Nothing to show</div>
+					<div ng-if="!loading.creditDiscoveries && creditDiscoveries.length < 1">Nothing to show</div>
+					<div ng-if="loading.creditDiscoveries" class="loader-tight loader-faded" ng-include="'views/loader.html'"></div>
 				</div>
 			</div>
 		</div>
@@ -77,7 +78,8 @@
 							<a href="/#!/{{disc.apistring}}">{{disc.title}}</a>
 						</p>
 					</div>
-					<div ng-show="discoveries.length < 1">Nothing to show</div>
+					<div ng-if="!loading.discoveries && discoveries.length < 1">Nothing to show</div>
+					<div ng-if="loading.discoveries" class="loader-tight loader-faded" ng-include="'views/loader.html'"></div>
 				</div>
 			</div>
 		</div>
@@ -92,7 +94,8 @@
 							<span class="text-muted">{{obsv.comment}}</span>
 						</p>
 					</div>
-					<div ng-show="observations.length < 1">Nothing to show</div>
+					<div ng-if="!loading.observations && observations.length < 1">Nothing to show</div>
+					<div ng-if="loading.observations" class="loader-tight loader-faded" ng-include="'views/loader.html'"></div>
 				</div>
 			</div>
 		</div>
