Observation based fixes

--- a/www-src/app/styles/charts.less
+++ b/www-src/app/styles/charts.less
@@ -167,6 +167,17 @@
 	}
 }
 
+#comment-modal {
+	textarea {
+		resize: vertical;
+		max-height: 500px;
+	}
+
+	.btn[disabled=disabled] {
+		pointer-events: auto;
+	}
+}
+
 .county {
 	cursor: pointer;
 
