Fix news links on search page

--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -72,8 +72,8 @@
 
 					<div class="row">
 						<div class="media-body">
-							<h5 class="media-heading"><a href="/#!/{{item.url}}" target="_blank">{{item.title}}</a></h5>
-							<a ng-if="item.show !== false" href="/#!/{{item.url}}" target="_blank"><img class="thumbnail" ng-src="{{item.thumbnail}}" /></a>
+							<h5 class="media-heading"><a href="{{item.url}}" target="_blank">{{item.title}}</a></h5>
+							<a ng-if="item.show !== false" href="{{item.url}}" target="_blank"><img class="thumbnail" ng-src="{{item.thumbnail}}" /></a>
 						</div>
 					</div>
 				</div>
