--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -5,9 +5,18 @@
 <div class="row searchpage">
 	<div class="col-sm-9 col-xs-12">
 		<div class="row">
-			<form novalidate>
+			<!-- <form novalidate>
 				<div class="form-group">
 					<input class="form-control" type="search" placeholder="Enter your query here (e.g. gold)" ng-model="query" ng-change="init(true)">
+				</div>
+			</form> -->
+
+			<form ng-submit="search()" novalidate>
+				<div class="input-group">
+					<input class="form-control" type="search" placeholder="Enter your query here (e.g. gold)" ng-model="query" />
+					<span class="input-group-btn">
+						<button class="btn btn-primary" ng-click="changePage()">Search</button>
+					</span>
 				</div>
 			</form>
 
@@ -31,11 +40,11 @@
 					<div class="col-md-12 loader-tight" ng-show="loading.related" ng-include="'views/loader.html'"></div>
 				</div>
 
-				<div class="jumbotron" ng-if="!loading.related && results.length <= 0 && query.length > 0">
+				<div class="jumbotron" ng-if="!loading.related && results.length <= 0 && isSearch">
 					<p class="text-center">Sorry we are unable to find any search results for given request.</p>
 				</div>
 
-				<div class="row show-more" ng-click="showMore()" ng-if="!loading.related && results.length > 0 && query.length > 0">
+				<div class="row show-more" ng-click="showMore()" ng-if="!loading.related && results.length > 0 && isSearch">
 					<button class="col-md-6 col-md-offset-3 btn btn-default text-center">Show More</button>
 				</div>
 
