--- a/www-src/app/styles/sidebar.less
+++ b/www-src/app/styles/sidebar.less
@@ -94,6 +94,10 @@
 					cursor: pointer;
 					margin-right: 0;
 				}
+
+				i.glyphicon.text-warning {
+					cursor: not-allowed;
+				}
 			}
 		}
 
