--- a/www-src/app/views/charts/observations.html
+++ b/www-src/app/views/charts/observations.html
@@ -13,11 +13,14 @@
 			<span class="left pull-left">
 				<img class="media-object" ng-src="{{obsv.user.avatar}}">
 				<div class="votes" ng-if="obsv.user.username != username">
+					<i class="glyphicon glyphicon-arrow-up text-warning" ng-if="obsv.action == 'credited'"></i>
 					<i class="glyphicon glyphicon-arrow-up" ng-click="creditObservation(obsv, true)"></i>
 					<span>{{obsv.creditCount}}</span>
+					<i class="glyphicon glyphicon-arrow-down text-warning" ng-if="obsv.action == 'discredited'"></i>
 					<i class="glyphicon glyphicon-arrow-down" ng-click="creditObservation(obsv, false)"></i>
 				</div>
 			</span>
+
 			<div class="media-body">
 				<h4 class="media-heading">{{obsv.user.username}} <span class="text-warning"><i class="glyphicon glyphicon-star"></i>{{obsv.user.reputation}}</span> <span class="label label-primary" ng-show="obsv.user.discoverer">Discoverer</span>
 				</h4>
