Get current user details on Observations.

--- a/www-src/app/styles/sidebar.less
+++ b/www-src/app/styles/sidebar.less
@@ -98,6 +98,10 @@
 				i.glyphicon.text-warning {
 					cursor: not-allowed;
 				}
+
+				i.glyphicon:hover {
+					color: #18bc9c;
+				}
 			}
 		}
 
