--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -66,7 +66,12 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<h4 class="text-center">My Activity Stream</h4>
 					<div class="row myActivity" ng-if="myActivity" ng-repeat="item in myActivity">
-						{{item.pretext}}<a href="/#!/{{item.url}}">{{item.linktext}}</a>
+						<div class="col-xs-1 text-center">
+							<i class="fa fa-bar-chart text-warning"></i>
+						</div>
+						<div class="col-xs-11">
+							{{item.pretext}}<a href="/#!/{{item.url}}">{{item.linktext}}</a>
+						</div>
 					</div>
 
 					<div ng-if="!myActivity" ng-include="'views/loader.html'"></div>
@@ -92,12 +97,12 @@
 				<div class="col-xs-12 col-md-4">
 					<h4 class="text-center">Current Data Experts</h4>
 					<div class="row dataExperts" ng-if="dataExperts" ng-repeat="item in dataExperts">
-						<div class="col-xs-2 text-center" ng-class="item.rankclass">
+						<div class="col-xs-1 text-center" ng-class="item.rankclass">
 							<i class="fa fa-trophy fa-lg" ng-if="item.rankclass"></i>
 							<span class="bold" ng-if="!item.rankclass">#{{item.rank}}</span>
 						</div>
 						<div class="col-xs-2 text-center"><img class="avatar" ng-src="{{item.avatar}}" /></div>
-						<div class="col-xs-5 text-center"><small>{{item.name}}</small></div>
+						<div class="col-xs-6 text-center"><small>{{item.name}}</small></div>
 						<div class="col-xs-3 gold" title="Reputation Points">
 							<i class="glyphicon glyphicon-star"></i>
 							<span>{{item.score}}</span>
