--- a/www-src/app/views/charts/observations.html
+++ b/www-src/app/views/charts/observations.html
@@ -13,10 +13,10 @@
 			<span class="left pull-left">
 				<img class="media-object" ng-src="{{obsv.user.avatar}}">
 				<div class="votes" ng-if="obsv.user.username != username">
-					<i class="glyphicon glyphicon-arrow-up text-warning" ng-if="obsv.action == 'credited'"></i>
+					<i class="glyphicon glyphicon-arrow-up text-danger" ng-if="obsv.action == 'credited'"></i>
 					<i class="glyphicon glyphicon-arrow-up" ng-click="creditObservation(obsv, true)" ng-if="obsv.action == ''"></i>
 					<span>{{obsv.creditCount}}</span>
-					<i class="glyphicon glyphicon-arrow-down text-warning" ng-if="obsv.action == 'discredited'"></i>
+					<i class="glyphicon glyphicon-arrow-down text-danger" ng-if="obsv.action == 'discredited'"></i>
 					<i class="glyphicon glyphicon-arrow-down" ng-click="creditObservation(obsv, false)" ng-if="obsv.action == ''"></i>
 				</div>
 			</span>
