--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -22,22 +22,22 @@
 						<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
 							<div class="media-heading">
 								<h5>
-									<a href="/#!/{{chart.url}}" ng-if="!chart.info">{{chart.title}}</a>
-									<a href="/#!/{{chart.info.url}}" ng-if="chart.info">{{chart.info.title[0]}} and {{chart.info.title[1]}}</a>
+									<a href="{{chart.url}}" ng-if="!chart.info">{{chart.title}}</a>
+									<a href="{{chart.info.url}}" ng-if="chart.info">{{chart.info.title[0]}} and {{chart.info.title[1]}}</a>
 								</h5>
 							</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
-							<a class="related media-body" ng-if="!chart.info" href="/#!/{{chart.url}}">
+							<a class="related media-body" ng-if="!chart.info" href="{{chart.url}}">
 								<span ng-include="'views/charts/related/line.html'"></span>
 								<span ng-include="'views/charts/related/row.html'"></span>
 								<span ng-include="'views/charts/related/column.html'"></span>
 								<span ng-include="'views/charts/related/pie.html'"></span>
 								<span ng-include="'views/charts/related/bubble.html'"></span>
 							</a>
-							<a class="correlated media-body" ng-if="chart.info" href="/#!/{{chart.info.url}}">
+							<a class="correlated media-body" ng-if="chart.info" href="{{chart.info.url}}">
 								<span ng-include="'views/charts/correlated/line.html'"></span>
 								<span ng-include="'views/charts/correlated/column.html'"></span>
 								<span ng-include="'views/charts/correlated/scatter.html'"></span>
@@ -67,20 +67,20 @@
 					<h4 class="text-center">My Activity Stream</h4>
 					<div class="row myActivity" ng-if="myActivity" ng-repeat="item in myActivity">
 						<div class="col-xs-1 text-center">
-							<a href="/#!/{{item.url}}">
+							<a href="{{item.url}}">
 								<i class="fa fa-bar-chart text-success" ng-if="item.action == 'cc'"></i>
-								<i class="fa fa-bar-chart text-warning" ng-if="item.action == 'dc'"></i>
+								<i class="fa fa-bar-chart text-danger" ng-if="item.action == 'dc'"></i>
 								<i class="fa fa-eye text-success" ng-if="item.action == 'co'"></i>
-								<i class="fa fa-eye text-warning" ng-if="item.action == 'do'"></i>
+								<i class="fa fa-eye text-danger" ng-if="item.action == 'do'"></i>
 								<i class="fa fa-comments" ng-if="item.action == 'c'"></i>
 							</a>
 						</div>
 						<div class="col-xs-11">
-							<span ng-if="item.action == 'cc'">You credited a <a href="/#!/{{item.url}}">pattern</a></span>
-							<span ng-if="item.action == 'dc'">You discredited a <a href="/#!/{{item.url}}">pattern</a></span>
-							<span ng-if="item.action == 'co'">You gained {{item.points}} when {{item.actor}} credited your observation on <a href="/#!/{{item.url}}">pattern</a></span>
-							<span ng-if="item.action == 'do'">You lost {{item.points}} when {{item.actor}} discredited your observation on <a href="/#!/{{item.url}}">pattern</a></span>
-							<span ng-if="item.action == 'c'">You gained {{item.points}} when {{item.actor}} made an observation on your <a href="/#!/{{item.url}}">discovered pattern</a></span>
+							<span ng-if="item.action == 'cc'">You credited a <a href="{{item.url}}">pattern</a></span>
+							<span ng-if="item.action == 'dc'">You discredited a <a href="{{item.url}}">pattern</a></span>
+							<span ng-if="item.action == 'co'">You gained <span class="label label-{{item.points.class}}">{{item.points.value}}</span> {{item.points.text}} when <a href="#">{{item.actor}}</a> credited your observation</span>
+							<span ng-if="item.action == 'do'">You lost <span class="label label-{{item.points.class}}">{{item.points.value}}</span> {{item.points.text}} when {{item.actor}} discredited your observation</span>
+							<span ng-if="item.action == 'c'">You gained <span class="label label-{{item.points.class}}">{{item.points.value}}</span> {{item.points.text}} when {{item.actor}} made an observation on your discovery</span>
 						</div>
 					</div>
 
@@ -94,7 +94,7 @@
 					<div class="row recentObservations" ng-if="recentObservations" ng-repeat="item in recentObservations">
 						<div class="col-xs-2 text-center"><img class="avatar" ng-src="{{item.user.avatar}}" /></div>
 						<div class="col-xs-10">
-							<p><a href="/#!/{{item.url}}">{{item.text|truncate:25}}</a></p>
+							<p><a href="{{item.url}}">{{item.text|truncate:25}}</a></p>
 							<p class="italic">posted by {{item.user.name}}</p>
 						</div>
 					</div>
