Added User Profiles. ngHref link fixes.

--- a/www-src/app/views/charts/observations.html
+++ b/www-src/app/views/charts/observations.html
@@ -22,7 +22,7 @@
 			</span>
 
 			<div class="media-body">
-				<h4 class="media-heading">{{obsv.user.username}} <span class="text-warning"><i class="glyphicon glyphicon-star"></i>{{obsv.user.reputation}}</span> <span class="label label-primary" ng-show="obsv.user.discoverer">Discoverer</span>
+				<h4 class="media-heading"><a href="/profile/{{obsv.user.username}}">{{obsv.user.username}}</a> <span class="text-warning"><i class="glyphicon glyphicon-star"></i>{{obsv.user.reputation}}</span> <span class="label label-primary" ng-show="obsv.user.discoverer">Discoverer</span>
 				</h4>
 				{{obsv.message}}
 			</div>
