--- a/www-src/app/views/recent.html
+++ b/www-src/app/views/recent.html
@@ -2,12 +2,12 @@
 
 <div class="home list-group" ng-show="lastVisited.length > 0">
 	<p>You where last viewing:</p>
-	<a class="list-group-item row" ng-repeat="item in lastVisited" href="/#!/overview/{{item.guid}}">
+	<a class="list-group-item row" ng-repeat="item in lastVisited" href="/overview/{{item.guid}}">
 		<span class="col-md-9">{{item.title}}</span>
 		<span class="col-md-3 text-right">
-			<!-- <a class="btn btn-danger btn-xs" href="/#!/charts/{{item.guid}}/{{item.info.type}}/{{item.info.x}}/{{item.info.y}}" ng-show="item.info != null">Chart</a> -->
-			<!-- <a class="btn btn-warning btn-xs" href="/#!/overview/{{item.guid}}">Overview</a> -->
-			<!-- <a class="btn btn-primary btn-xs" href="/#!/map/{{item.guid}}" ng-show="item.map">Map</a> -->
+			<!-- <a class="btn btn-danger btn-xs" href="/charts/{{item.guid}}/{{item.info.type}}/{{item.info.x}}/{{item.info.y}}" ng-show="item.info != null">Chart</a> -->
+			<!-- <a class="btn btn-warning btn-xs" href="/overview/{{item.guid}}">Overview</a> -->
+			<!-- <a class="btn btn-primary btn-xs" href="/map/{{item.guid}}" ng-show="item.map">Map</a> -->
 		</span>
 	</a>
 </div>
@@ -18,5 +18,5 @@
 </div>
 
 <p>
-	<a class="btn btn-lg btn-primary" href="/#!/search" role="button">Search Data</a>
+	<a class="btn btn-lg btn-primary" href="/search" role="button">Search Data</a>
 </p>
