--- a/www-src/app/views/user/reset-password.html
+++ b/www-src/app/views/user/reset-password.html
@@ -48,5 +48,5 @@
 
 <div ng-show="resetPassword.saved">
 	<h3>Your password has been changed successfully.</h3>
-	Follow <a href="/#!/user/login">this</a> link and Login using your new password.
+	Follow <a href="/user/login">this</a> link and Login using your new password.
 </div>
