--- a/www-src/app/views/charts.html
+++ b/www-src/app/views/charts.html
@@ -4,8 +4,8 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-9">
 			<ul class="breadcrumb">
-				<li><a href="/#!/home">Home</a></li>
-				<li><a href="/#!/overview/{{params.id}}">{{params.id}}</a></li>
+				<li><a href="/home">Home</a></li>
+				<li><a href="/overview/{{params.id}}">{{params.id}}</a></li>
 			</ul>
 		</div>
 	</div>
@@ -22,7 +22,7 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-6 constrict-graphs">
 			<div class="action-bar">
-				<a href="/#!/overview/{{params.id}}" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-share-alt glyphicon-flip"></span> Go Back</a>
+				<a href="/overview/{{params.id}}" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-share-alt glyphicon-flip"></span> Go Back</a>
 			</div>
 
 			<div>{{chart.title}}</div>
