--- a/www-src/app/views/user/login.html
+++ b/www-src/app/views/user/login.html
@@ -20,7 +20,7 @@
 				<button type="submit" class="btn btn-primary btn-block" id="submit-login" value="Login" title="Login" ng-disabled="!loginForm.$valid"><span>Login</span></button>
 			</div>
 			<div class="form-group text-right">
-				<a href="/#!/user/forgotpassword">Forgot your password?</a>
+				<a href="/user/forgotpassword">Forgot your password?</a>
 			</div>
 		</form>
 		<div class="row">
