--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -28,9 +28,10 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="row">
 						<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
-							<a class="related media-body" ng-if="!chart.info" href="{{chart.url}}">
+							<!-- <a class="related media-body" ng-if="!chart.info" href="{{chart.url}}">
 								<span ng-include="'views/charts/related/line.html'"></span>
 								<span ng-include="'views/charts/related/row.html'"></span>
 								<span ng-include="'views/charts/related/column.html'"></span>
@@ -41,7 +42,7 @@
 								<span ng-include="'views/charts/correlated/line.html'"></span>
 								<span ng-include="'views/charts/correlated/column.html'"></span>
 								<span ng-include="'views/charts/correlated/scatter.html'"></span>
-							</a>
+							</a> -->
 						</div>
 
 						<div class="col-xs-12" ng-if="!chartsRelated" ng-include="'views/loader.html'"></div>
@@ -51,8 +52,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 loader-tight" ng-if="loading.charts" ng-include="'views/loader.html'">
-				</div>
+
+				<div class="col-xs-12 loader-tight" ng-if="loading.charts" ng-include="'views/loader.html'"></div>
+
 				<div class="col-xs-12" ng-if="!loading.charts && chartsRelated.length === 0">
 					<p class="text-center text-muted">There are no charts currently awaiting approval.</p>
 				</div>
