--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -31,7 +31,7 @@
 
 					<div class="row">
 						<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
-							<!-- <a class="related media-body" ng-if="!chart.info" href="{{chart.url}}">
+							<a class="related media-body" ng-if="!chart.info" href="{{chart.url}}">
 								<span ng-include="'views/charts/related/line.html'"></span>
 								<span ng-include="'views/charts/related/row.html'"></span>
 								<span ng-include="'views/charts/related/column.html'"></span>
@@ -42,7 +42,7 @@
 								<span ng-include="'views/charts/correlated/line.html'"></span>
 								<span ng-include="'views/charts/correlated/column.html'"></span>
 								<span ng-include="'views/charts/correlated/scatter.html'"></span>
-							</a> -->
+							</a>
 						</div>
 
 						<div class="col-xs-12" ng-if="!chartsRelated" ng-include="'views/loader.html'"></div>
@@ -78,19 +78,19 @@
 							</a>
 						</div>
 						<div class="col-xs-11">
-							<span ng-if="item.action == 'cc' && item.points.value == 0">You credited a <a href="{{item.url}}">pattern</a></span>
+							<span ng-if="item.action == 'cc' && item.points.value == 0">You credited a <a href="{{item.url}}">{{item.title|truncate:30}}</a></span>
 							<span ng-if="item.action == 'cc' && item.points.value != 0">You gained <span class="label label-{{item.points.class}}">{{item.points.value}}</span> {{item.points.text}} when <a href="/profile/{{item.actor}}">{{item.actor}}</a> credited your <a href="{{item.url}}">discovery</a></span>
 
-							<span ng-if="item.action == 'dc' && item.points.value == 0">You discredited a <a href="{{item.url}}">pattern</a></span>
+							<span ng-if="item.action == 'dc' && item.points.value == 0">You discredited a <a href="{{item.url}}">{{item.title|truncate:30}}</a></span>
 							<span ng-if="item.action == 'dc' && item.points.value != 0">You lost <span class="label label-{{item.points.class}}">{{item.points.value}}</span> {{item.points.text}} when <a href="/profile/{{item.actor}}">{{item.actor}}</a> discredited your <a href="{{item.url}}">discovery</a></span>
 
-							<span ng-if="item.action == 'co' && item.points.value == 0">You credited <a href="/profile/{{item.actor}}">{{item.actor}}</a>'s  observation on <a href="{{item.url}}">pattern</a></span>
-							<span ng-if="item.action == 'co' && item.points.value != 0">You gained <span class="label label-{{item.points.class}}">{{item.points.value}}</span> {{item.points.text}} when <a href="/profile/{{item.actor}}">{{item.actor}}</a> credited your observation on <a href="{{item.url}}">pattern</a></span>
+							<span ng-if="item.action == 'co' && item.points.value == 0">You credited <a href="/profile/{{item.actor}}">{{item.actor}}</a>'s  observation on <a href="{{item.url}}">{{item.title|truncate:30}}</a></span>
+							<span ng-if="item.action == 'co' && item.points.value != 0">You gained <span class="label label-{{item.points.class}}">{{item.points.value}}</span> {{item.points.text}} when <a href="/profile/{{item.actor}}">{{item.actor}}</a> credited your observation on <a href="{{item.url}}">{{item.title|truncate:30}}</a></span>
 
-							<span ng-if="item.action == 'do' && item.points.value == 0">You discredited <a href="/profile/{{item.actor}}">{{item.actor}}</a>'s observation on <a href="{{item.url}}">pattern</a></span>
-							<span ng-if="item.action == 'do' && item.points.value != 0">You lost <span class="label label-{{item.points.class}}">{{item.points.value}}</span> {{item.points.text}} when <a href="/profile/{{item.actor}}">{{item.actor}}</a> discredited your observation on <a href="{{item.url}}">pattern</a></span>
+							<span ng-if="item.action == 'do' && item.points.value == 0">You discredited <a href="/profile/{{item.actor}}">{{item.actor}}</a>'s observation on <a href="{{item.url}}">{{item.title|truncate:30}}</a></span>
+							<span ng-if="item.action == 'do' && item.points.value != 0">You lost <span class="label label-{{item.points.class}}">{{item.points.value}}</span> {{item.points.text}} when <a href="/profile/{{item.actor}}">{{item.actor}}</a> discredited your observation on <a href="{{item.url}}">{{item.title|truncate:30}}</a></span>
 
-							<span ng-if="item.action == 'c' && item.points.value == 0">You made an observation on a <a href="{{item.url}}">pattern</a></span>
+							<span ng-if="item.action == 'c' && item.points.value == 0">You made an observation on a <a href="{{item.url}}">{{item.title|truncate:30}}</a></span>
 							<span ng-if="item.action == 'c' && item.points.value != 0">You gained <span class="label label-{{item.points.class}}">{{item.points.value}}</span> {{item.points.text}} when <a href="/profile/{{item.actor}}">{{item.actor}}</a> made an observation on your <a href="{{item.url}}">discovery</a></span>
 						</div>
 					</div>
