--- a/www-src/app/views/admin/users.html
+++ b/www-src/app/views/admin/users.html
@@ -34,7 +34,7 @@
 			</th>
 			<th></th>
 		</tr>
-		<tr ng-if="users.length === 0"><td colspan="7" ng-include="'../views/loader.html'"></td></tr>
+		<tr ng-if="loading && users.length === 0"><td colspan="7" ng-include="'../views/loader.html'"></td></tr>
 		<tr ng-repeat="user in users | limitTo: pagination.perPage">
 			<td>{{user.uid}}</td>
 			<td class="text-center">
