Aesthetically improve profile page details area

--- a/www-src/app/styles/profile.less
+++ b/www-src/app/styles/profile.less
@@ -1,3 +1,15 @@
+#profileDetails {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	min-height: 100px;
+
+	.avatar {
+		max-width: 100px;
+		max-height: 100px;
+		border-radius: 5px;
+	}
+}
+
 .tab-content {
 	margin-top: 10px;
 
