--- a/www-src/app/views/charts/info.html
+++ b/www-src/app/views/charts/info.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row ci-row" ng-show="info.discoverer">
 	<div class="col-sm-6 ci-key">Discovered by</div>
-	<div class="col-sm-6 ci-val">{{info.discoverer}}</div>
+	<div class="col-sm-6 ci-val"><a href="/profile/{{info.discoverer}}">{{info.discoverer}}</a></div>
 </div>
 <div class="row ci-row" ng-show="info.discoverDate">
 	<div class="col-sm-6 ci-key">Date discovered</div>
@@ -19,13 +19,13 @@
 <div class="row ci-row" ng-show="info.creditors.length > 0">
 	<div class="col-sm-6 ci-key">Credited by</div>
 	<div class="col-sm-6 ci-val">
-		<span class="csl" ng-repeat="crdtr in info.creditors">{{crdtr}}</span>
+		<span class="csl" ng-repeat="crdtr in info.creditors"><a href="/profile/{{crdtr}}">{{crdtr}}</a></span>
 	</div>
 </div>
 <div class="row ci-row" ng-show="info.discreditors.length > 0">
 	<div class="col-sm-6 ci-key">Discredited by</div>
 	<div class="col-sm-6 ci-val">
-		<span class="csl" ng-repeat="dscrdtr in info.discreditors">{{dscrdtr}}</span>
+		<span class="csl" ng-repeat="dscrdtr in info.discreditors"><a href="/profile/{{dscrdtr}}">{{dscrdtr}}</a></span>
 	</div>
 </div>
 <div class="row ci-row" ng-show="info.source.prim">
