Change the labels in the Overview sidebar to match the colours of the rest of the overview screen

--- a/www-src/app/views/overviewscreen.html
+++ b/www-src/app/views/overviewscreen.html
@@ -95,10 +95,10 @@
 			<div class="content">
 				<div class="media" ng-repeat="sect in sidebarSections">
 					<h5>{{sect.category}}</h5>
-					<div class="row" ng-repeat="item in sect.top5">
+					<div class="row" ng-repeat="(key, item) in sect.top5">
 						<p class="item" ng-show="item.amount > 0">
-							<span class="label label-primary label-purple">{{item.amount}}</span>&nbsp;&nbsp;
-							<a href="/{{sect.url}}/{{item.term}}">{{item.term}}</a>
+							<span ng-class="labelClass(key)">{{item.amount}}</span>&nbsp;&nbsp;
+							<a href="/{{sect.url}}/{{item.term}}" class="text-info">{{item.term}}</a>
 						</p>
 					</div>
 					<div class="nothing" ng-hide="sect.top5.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
