Make all the overview sidebar labels the same width

--- a/www-src/app/styles/overviewscreen.less
+++ b/www-src/app/styles/overviewscreen.less
@@ -2,9 +2,10 @@
 	background-color: #CAA8D9;
 }
 
-
 .label[class^='label-severe'], .label[class*=' label-severe'] {
 	cursor: default;
+	display: inline-block;
+	width: 5em;
 
 	&.label-severe-1 {
 		background-color: #bb423c;
