Convert overview related to use the related chart helper class

--- a/www-src/app/styles/charts.less
+++ b/www-src/app/styles/charts.less
@@ -48,6 +48,13 @@
 
 .overview {
 	.dc-chart {
+		float: none;
+		text-align: center;
+
+		.axis {
+			display: none;
+		}
+
 		.dc-legend {
 			display: none;
 		}
