--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -98,7 +98,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<h4 class="text-center">Recent Community Observations</h4>
 					<div class="row recentObservations" ng-if="recentObservations" ng-repeat="item in recentObservations">
-						<div class="col-xs-2 text-center"><img class="avatar" ng-src="{{item.user.avatar}}" /></div>
+						<div class="col-xs-2 text-center"><a href="/profile/{{item.user.name}}"><img class="avatar" ng-src="{{item.user.avatar}}" /></a></div>
 						<div class="col-xs-10">
 							<p><a href="{{item.url}}">{{item.text|truncate:25}}</a></p>
 							<p class="italic">posted by <a href="/profile/{{item.user.name}}">{{item.user.name}}</a></p>
@@ -117,7 +117,7 @@
 							<i class="fa fa-trophy fa-lg" ng-if="item.rankclass"></i>
 							<span class="bold" ng-if="!item.rankclass">#{{item.rank}}</span>
 						</div>
-						<div class="col-xs-2 text-center"><img class="avatar" ng-src="{{item.avatar}}" /></div>
+						<div class="col-xs-2 text-center"><a href="/profile/{{item.name}}"><img class="avatar" ng-src="{{item.avatar}}" /></a></div>
 						<div class="col-xs-6 text-center"><a href="/profile/{{item.name}}">{{item.name}}</a></div>
 						<div class="col-xs-3 gold" title="Reputation Points">
 							<i class="glyphicon glyphicon-star"></i>
