Don't hover green on 'disabled' credit observation buttons on chart page

--- a/www-src/app/styles/sidebar.less
+++ b/www-src/app/styles/sidebar.less
@@ -99,7 +99,7 @@
 					cursor: not-allowed;
 				}
 
-				i.glyphicon:hover {
+				i.glyphicon:hover:not(.text-danger) {
 					color: #18bc9c;
 				}
 			}
