Reposition Discoverer label

--- a/www-src/app/styles/sidebar.less
+++ b/www-src/app/styles/sidebar.less
@@ -64,6 +64,11 @@
 			span {
 				font-size: 0.6em;
 				margin: 0 5px;
+
+				&.discoverer {
+					float: right;
+					margin: 3px 0;
+				}
 			}
 		}
 
