Position items on profile page on 2 columns to maximise horizontal space

--- a/www-src/app/views/user/profile.html
+++ b/www-src/app/views/user/profile.html
@@ -71,13 +71,19 @@
 
 		<div ng-class="{true: 'tab-pane fade active in', false: 'tab-pane fade'}[currentTab == 'creditdiscoveries']" id="creditdiscoveries">
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
-					<p class="text-center"><span ng-if="isLoggedInUser">My </span><span ng-if="!isLoggedInUser && current.username">{{current.username}}'s </span>Credited Discoveries</p>
-					<div ng-repeat="disc in creditDiscoveries">
-						<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
-						<p class="profile-li">
-							<a href="/{{disc.apistring}}">{{disc.title}}</a>
-						</p>
+				<div class="col-xs-12 col-md-10 col-md-offset-1">
+					<div class="row">
+						<div class="col-xs-12">
+							<p class="text-center"><span ng-if="isLoggedInUser">My </span><span ng-if="!isLoggedInUser && current.username">{{current.username}}'s </span>Credited Discoveries</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0" ng-repeat="disc in creditDiscoveries">
+							<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
+							<p class="profile-li">
+								<a href="/{{disc.apistring}}">{{disc.title}}</a>
+							</p>
+						</div>
 					</div>
 					<div ng-if="!loading.creditDiscoveries && creditDiscoveries.length < 1">Nothing to show</div>
 					<div ng-if="loading.creditDiscoveries" class="loader-tight loader-faded" ng-include="'views/loader.html'"></div>
@@ -87,13 +93,19 @@
 
 		<div ng-class="{true: 'tab-pane fade active in', false: 'tab-pane fade'}[currentTab == 'discoveries']" id="discoveries">
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
-					<p class="text-center"><span ng-if="isLoggedInUser">My </span><span ng-if="!isLoggedInUser && current.username">{{current.username}}'s </span>Discoveries</p>
-					<div ng-repeat="disc in discoveries">
-						<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
-						<p class="profile-li">
-							<a href="/{{disc.apistring}}">{{disc.title}}</a>
-						</p>
+				<div class="col-xs-12 col-md-10 col-md-offset-1">
+					<div class="row">
+						<div class="col-xs-12">
+							<p class="text-center"><span ng-if="isLoggedInUser">My </span><span ng-if="!isLoggedInUser && current.username">{{current.username}}'s </span>Discoveries</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0" ng-repeat="disc in discoveries">
+							<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
+							<p class="profile-li">
+								<a href="/{{disc.apistring}}">{{disc.title}}</a>
+							</p>
+						</div>
 					</div>
 					<div ng-if="!loading.discoveries && discoveries.length < 1">Nothing to show</div>
 					<div ng-if="loading.discoveries" class="loader-tight loader-faded" ng-include="'views/loader.html'"></div>
@@ -103,14 +115,20 @@
 
 		<div ng-class="{true: 'tab-pane fade active in', false: 'tab-pane fade'}[currentTab == 'observations']" id="observations">
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
-					<p class="text-center"><span ng-if="isLoggedInUser">My </span><span ng-if="!isLoggedInUser && current.username">{{current.username}}'s </span>Observations</p>
-					<div ng-repeat="obsv in observations">
-						<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
-						<p class="profile-li">
-							<a href="/{{obsv.apistring}}">{{obsv.charttitle}}</a><br/>
-							<span class="text-muted">{{obsv.comment}}</span>
-						</p>
+				<div class="col-xs-12 col-md-10 col-md-offset-1">
+					<div class="row">
+						<div class="col-xs-12">
+							<p class="text-center"><span ng-if="isLoggedInUser">My </span><span ng-if="!isLoggedInUser && current.username">{{current.username}}'s </span>Observations</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0" ng-repeat="obsv in observations">
+							<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
+							<p class="profile-li">
+								<a href="/{{obsv.apistring}}">{{obsv.charttitle}}</a><br/>
+								<span class="text-muted">{{obsv.comment}}</span>
+							</p>
+						</div>
 					</div>
 					<div ng-if="!loading.observations && observations.length < 1">Nothing to show</div>
 					<div ng-if="loading.observations" class="loader-tight loader-faded" ng-include="'views/loader.html'"></div>
