Show all search results as soon as we get them, and load charts afterwards

--- a/www-src/app/styles/search.less
+++ b/www-src/app/styles/search.less
@@ -32,6 +32,14 @@
 		}
 	}
 
+	.chart-loader {
+		height: 200px;
+
+		.spinner {
+			margin-top: 50px;
+		}
+	}
+
 	.show-more {
 		padding: 5px;
 		margin: 15px 0 5px 0;
