Hide axis on correlated charts on the overview page

--- a/www-src/app/styles/charts.less
+++ b/www-src/app/styles/charts.less
@@ -51,13 +51,13 @@
 		float: none;
 		text-align: center;
 
-		.axis {
-			display: none;
-		}
 
 		.dc-legend {
 			display: none;
 		}
+	}
+	.axis, .nv-axis {
+		display: none;
 	}
 }
 
